Do deterministic builds

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -27,8 +27,8 @@ jobs:
     - uses: dotnet/nbgv@v0.4
       id: nbgv
     - run: dotnet restore
-    - run: dotnet build -c Release --no-restore
-    - run: dotnet pack -c Release --no-restore
+    - run: dotnet build -c Release --no-restore /p:ContinuousIntegrationBuild=true
+    - run: dotnet pack -c Release --no-restore --no-build
     - uses: actions/upload-artifact@v3
       with:
         name: FastBertTokenizer-nupkg-${{ steps.nbgv.outputs.Version }}
