--- a/src/Benchmarks/Benchmarks.csproj
+++ b/src/Benchmarks/Benchmarks.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="BenchmarkDotNet" />
     <PackageReference Include="BenchmarkDotNet.Diagnostics.Windows" />
     <PackageReference Include="BERTTokenizers" />
+    <PackageReference Include="System.Interactive" />
   </ItemGroup>
 
   <ItemGroup>
