Test against rust lib instead of python container via rest

--- a/src/FastBertTokenizer.Tests/FastBertTokenizer.Tests.csproj
+++ b/src/FastBertTokenizer.Tests/FastBertTokenizer.Tests.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FastBertTokenizer\FastBertTokenizer.csproj" />
+    <ProjectReference Include="..\HuggingfaceTokenizer\RustLibWrapper\RustLibWrapper.csproj" />
   </ItemGroup>
 
   <ItemGroup>
