--- a/src/HuggingfaceTokenizer/RustLibWrapper/RustLibWrapper.csproj
+++ b/src/HuggingfaceTokenizer/RustLibWrapper/RustLibWrapper.csproj
@@ -8,7 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="../RustLib/target/release/tokenize.dll">
+    <None Include="../RustLib/target/release/*.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="../RustLib/target/release/*.so">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="../RustLib/target/release/*.dylib">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
