Add more robust testing

--- a/src/FastBertTokenizer.Tests/FastBertTokenizer.Tests.csproj
+++ b/src/FastBertTokenizer.Tests/FastBertTokenizer.Tests.csproj
@@ -22,6 +22,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Xunit.SkippableFact" />
   </ItemGroup>
 
   <ItemGroup>
@@ -32,6 +33,20 @@
   <ItemGroup>
     <None Update="Vocabularies\baai-bge-small-en-vocab.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="../../data/wiki-simple.json.br">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>data/wiki-simple.json.br</Link>
+    </None>
+    <None Include="../../data/baai-bge-small-en-vocab.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>data/baai-bge-small-en-vocab.txt</Link>
+    </None>
+    <None Include="../../data/baai-bge-small-en-tokenizer.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>data/baai-bge-small-en-tokenizer.json</Link>
     </None>
   </ItemGroup>
 
