--- a/src/HuggingfaceTokenizer/BenchRust/Cargo.toml
+++ b/src/HuggingfaceTokenizer/BenchRust/Cargo.toml
@@ -6,4 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokenizers = "0.14"
+tokenizers = "0.15"
+brotli = "3.4"
+serde = "1.0"
+serde_json = "1.0"
+
+[dev-dependencies]
+criterion = { version = "0.5.1", features = ["html_reports"] }
+
+[[bench]]
+name = "my_benchmark"
+harness = false
