Benchmark .NET7 vs .NET 8
Just upgrading seems to improve mean execution by about ~10% on my machine:

| Method                       | Runtime  | Mean      | Error    | StdDev    | Gen0       | Gen1     | Gen2     | Allocated |
|----------------------------- |--------- |----------:|---------:|----------:|-----------:|---------:|---------:|----------:|
| SingleThreadedMemReuse       | .NET 7.0 | 450.33 ms | 8.867 ms |  7.860 ms | 76000.0000 |        - |        - | 152.72 MB |
| MultithreadedMemReuseBatched | .NET 7.0 | 102.93 ms | 1.629 ms |  1.524 ms | 77166.6667 | 333.3333 | 166.6667 |  164.5 MB |
| SingleThreadedMemReuse       | .NET 8.0 | 394.20 ms | 7.755 ms | 12.300 ms | 76000.0000 |        - |        - | 152.72 MB |
| MultithreadedMemReuseBatched | .NET 8.0 |  94.58 ms | 1.806 ms |  1.689 ms | 77166.6667 | 333.3333 | 166.6667 |  164.5 MB |

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -35,5 +35,5 @@ jobs:
     - run: cargo build --release
       working-directory: src/HuggingfaceTokenizer/RustLib
 
-    - run: dotnet run -c Release
+    - run: dotnet run -c Release -f net8.0
       working-directory: src/Benchmarks
