Add ability to load tokenizer.json

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageVersion Include="coverlet.collector" Version="6.0.0" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageVersion Include="PolySharp" Version="1.14.0" />
     <PackageVersion Include="Shouldly" Version="4.2.1" />
     <PackageVersion Include="Verify.Xunit" Version="22.6.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.4" />
