--- a/src/FastBertTokenizer.Tests/FastBertTokenizer.Tests.csproj
+++ b/src/FastBertTokenizer.Tests/FastBertTokenizer.Tests.csproj
@@ -31,17 +31,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="../../data/wiki-simple.json.br">
+    <None Include="../../data/**/*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>data/wiki-simple.json.br</Link>
-    </None>
-    <None Include="../../data/baai-bge-small-en/vocab.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>data/baai-bge-small-en/vocab.txt</Link>
-    </None>
-    <None Include="../../data/baai-bge-small-en/tokenizer.json">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <Link>data/baai-bge-small-en/tokenizer.json</Link>
+      <Link>data\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </None>
   </ItemGroup>
 
