--- a/src/HuggingfaceTokenizer/BenchRust/Cargo.toml
+++ b/src/HuggingfaceTokenizer/BenchRust/Cargo.toml
@@ -17,3 +17,7 @@ criterion = { version = "0.5.1", features = ["html_reports"] }
 [[bench]]
 name = "my_benchmark"
 harness = false
+
+[[bench]]
+name = "like_huggingface"
+harness = false
