--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,12 +55,20 @@ jobs:
     - run: dotnet restore /p:ContinuousIntegrationBuild=true
     - run: dotnet build -c Release --no-restore /p:ContinuousIntegrationBuild=true
 
-    - run: dotnet test -c Release --no-restore --no-build --logger "trx;LogFileName=test-results-${{ steps.nbgv.outputs.Version }}.trx" /p:ContinuousIntegrationBuild=true
-    - uses: actions/upload-artifact@v3
-      if: success() || failure()
-      with:
-        name: test-results
-        path: "**/*.trx"
+    - run: >
+        dotnet test
+        -c Release --no-restore --no-build
+        /p:ContinuousIntegrationBuild=true
+        --collect:"XPlat Code Coverage"
+        --logger "GitHubActions;summary.includePassedTests=true;summary.includeSkippedTests=true"
+        --
+        RunConfiguration.CollectSourceInformation=true
+
+    - name: Upload coverage reports to Codecov
+      if: ${{ env.CODECOV_TOKEN }}
+      uses: codecov/codecov-action@v3
+      env:
+        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
     - run: dotnet pack -c Release --no-restore --no-build /p:ContinuousIntegrationBuild=true
     - uses: actions/upload-artifact@v3
