Improve test coverage

--- a/src/FastBertTokenizer.Tests/FastBertTokenizer.Tests.csproj
+++ b/src/FastBertTokenizer.Tests/FastBertTokenizer.Tests.csproj
@@ -39,6 +39,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <Link>data\%(RecursiveDir)%(Filename)%(Extension)</Link>
     </None>
+    <None Include="data/**/*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <Link>data\%(RecursiveDir)%(Filename)%(Extension)</Link>
+    </None>
   </ItemGroup>
 
 </Project>
