--- a/src/examples/SemanticSearch/SemanticSearch.csproj
+++ b/src/examples/SemanticSearch/SemanticSearch.csproj
@@ -5,6 +5,8 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <NoWarn>FBERTTOK001</NoWarn> <!-- Experimental FastBertTokenizer features -->
   </PropertyGroup>
 
   <ItemGroup>
