--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -26,6 +26,9 @@
     <PackageVersion Include="PolySharp" Version="1.14.1" />
     <PackageVersion Include="Shouldly" Version="4.2.1" />
     <PackageVersion Include="SimpleSIMD" Version="4.6.0" />
+    <PackageVersion Include="System.Memory" Version="4.5.5" />
+    <PackageVersion Include="System.Text.Json" Version="8.0.2" />
+    <PackageVersion Include="System.Threading.Channels" Version="8.0.0" />
     <PackageVersion Include="Verify.Xunit" Version="24.1.0" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.8" />
     <PackageVersion Include="xunit" Version="2.7.1" />
