--- a/.github/workflows/ci-aot.yml
+++ b/.github/workflows/ci-aot.yml
@@ -26,6 +26,8 @@ jobs:
 
     - name: Setup dotnet
       uses: actions/setup-dotnet@v4
+      with:
+        global-json-file: global.json
 
     - name: publish AOT testApp, assert static analysis warning count, and run the app
       shell: pwsh
