Use SemVer2 for versioning, fix publicReleaseRefSpec

--- a/.github/workflows/benchmark-rust.yml
+++ b/.github/workflows/benchmark-rust.yml
@@ -29,5 +29,5 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-        name: criterion-reports-${{ steps.nbgv.outputs.Version }}
+        name: criterion-reports-${{ steps.nbgv.outputs.SemVer2 }}
         path: src/HuggingfaceTokenizer/BenchRust/target/criterion/**/*
