Run ci and benchmark workflows for PRs

--- a/.github/workflows/benchmark.yml
+++ b/.github/workflows/benchmark.yml
@@ -3,6 +3,9 @@ name: Benchmark
 on:
   workflow_dispatch:
   push:
+  pull_request:
+    paths-ignore:
+    - '**.md'
 
 env:
   DOTNET_NOLOGO: true
